# BoneCommand

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
bonecommand/: __init__.py  __main__.py  bone-command.zsh  build.py  command.py  docker.py  gui.py  utils.py
bonecommand/basic/: 3rd.py  __init__.py  __main__.py
bonecommand/git/: __init__.py  __main__.py  utils.py
bonecommand/pdf/: __init__.py  __main__.py  utils.py
bonecommand/ssh/: __init__.py  __main__.py  ssh.py  utils.py
command/: __init__.py  command.py
command/git/: __main__.py
command/pdf/: __main__.py  utils.py
command/ssh/: __main__.py
